Thu Sep 29 01:58:23 UTC 2011  Abdullah Sowayan  <sowayan@gmail.com>

        * include/makeinclude/platform_macosx_lion.GNU:

          LLVM is the default compiler on Lion for now on. 

Fri Sep 23 12:45:47 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * bin/PerlACE/TestTarget.pm:
        * bin/PerlACE/TestTarget_Android.pm:
          Created a special method for the ADB timeout environment
          variable.

Fri Sep 23 09:25:04 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * bin/PerlACE/TestTarget_Android.pm:
          Stop the script when an emulator times out.

Wed Sep 14 07:54:28 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/TestTarget_Android.pm:
          Adding of libpath is only needed for non static builds

Tue Sep 13 08:12:40 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/TestTarget.pm:
          Added DOC_TEST_DEFAULT, this controls the default platform
          for all platform instead of defaulting to localhost

Tue Sep 13 08:12:40 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessAndroid.pm:
          Don't delete executable after each run

Mon Sep 12 12:55:58 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * ACE-INSTALL.html:
          Made some minor modification to the Android section.

Mon Sep 12 11:16:53 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-android.h:
          Android doesn't have icmp support

        * docs/bczar/bczar.html:
          Added telnet

Sun Sep 11 18:11:08 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessAndroid.pm:
          Don't copy any log files here, that has to be done in the test
          script

        * tests/run_test.pl:
          Get the log file from the target before analyzing it

Sun Sep 11 18:02:08 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessAndroid.pm:
          Fixed executable method
