@@ -168,6 +168,9 @@ sub store_file ($)
     elsif ($name =~ /\.(pm|cmd|java|sh|txt|xml)$/i) {
         push @files_generic, ($name);
     }
+    elsif ($name =~ /README$/i) {
+        push @files_generic, ($name);
+    }
 }
 
 ##############################################################################
@@ -225,7 +228,7 @@ sub check_for_id_string ()
     print "Running \$Id\$ string check\n";
     foreach $file (@files_cpp, @files_inl, @files_h, @files_mpc, @files_bor,
                    @files_gnu, @files_html, @files_idl, @files_pl,
-                   @makefile_files, @files_cdp, @files_py, @files_conf) {
+                   @makefile_files, @files_cdp, @files_py, @files_conf, @files_generic) {
         my $found = 0;
         if (open (FILE, $file)) {
             print "Looking at file $file\n" if $opt_d;
